--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,8 @@
-= cloud-manager
+== cloud-manager
 
-Description goes here.
+cloud-manager is the Ruby cloud manager library, top to bottom:
+* 
+
 
 == Contributing to cloud-manager
  
@@ -12,6 +14,36 @@ Description goes here.
 * Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
+== Getting Started
+
+  sudo gem install cloud-manager
+
+# create a cluster
+  IaasTask task = Iaas.create_cluster(parameter, :options => { :wait => false })
+        # parameter["cluster_definition"] is a Hash object which contains the definition of this cluster
+        # parameter["cloud_provider"] is a Hash object, which contains how to login the cloud server and the resource requirement.
+   
+# if caller doesn't care the progress, call this method to wait until this task is finished.
+  IaasResult result = task.wait_for_completion()
+   
+# if caller cares the progress, call this method
+  while !task.finished?
+    IaasProgress prog = task.get_progress()
+    # print out progess info
+   
+    # terminate the task if timed out or for other reason
+    task.abort if ...
+    end
+    IaasResult result = task.get_result()
+  if result.succeed?
+    handle result ... ...
+    else
+      handle failure ... ...
+      end
+       
+# delete the cluster
+      IaasTask task = Iaas.delete_cluster(parameter, :options => { :wait => true })
+   
 == Copyright
 
 Copyright (c) 2012 vmware. See LICENSE.txt for
