--- a/README.rdoc
+++ b/README.rdoc
@@ -3,8 +3,8 @@
 cloud-manager is a Ruby cloud manager library, top to bottom:
 * It is a simple Rubust Reliable and Extendable IaaS to manage cluster and VMs in cloud.
 * It manages clusters on vSphere to create/start/stop/delete/resize hadoop clusters, at present.
+* It provide a pluggable framework to use your own placement algorithm
 * It will provide fetching resources/cluster placement/cluster deploy services.
-* It will provide a pluggable framework to use your own placement algorithm
 * It supports vSphere Cloud, now. And it will support EC2 in the future.
 
 == Version Description
@@ -18,19 +18,11 @@ in one GROUP, each VM has same configuration. So it places massive VMs in a simp
 It also present the concept of virtual group (VG). VG is a set of VMs, which should be placed in one host.
 All kinds of GROUP, can place their VM in one Virtual Group. VG can handle the relationship between different GROUPs.
 
-== Placement Idea (round robin)
-
-Currently, It uses round robin strategy to put hadoop cluster's VMs to vSphere Cloud.
-It manages five type resources in vSphere: clusters, resource pools, hosts, datastores and networking.
-At present, our choose method is "round robin". Firstly, It chooses resouce pools in one cluster.
-And then, it chooses hosts one by one. In one host, It will check free memory size, datastores' free
-space and networking resources. if this host has enough resources for placing vm, it assigns cpu,
-memory, disks and networking for vm.
-
 == Getting Started
 
 === Install
 
+  Currently, It depend on fog-1.3.1.serengeti.1.gem, you should install it firstly.
   sudo gem install cloud-manager-0.5.0.gem --local --no-ri --no-rdoc
 
 === cloud provider definition
@@ -54,12 +46,13 @@ cloud_provider: {
   "vc_local_datastore_pattern": ["local*", "vmfs*"], #define the datastore_pattern for local storage
 
 === cloud-manager configuration
+
 It has a config class to config cloud-manager's configuration.
 You could write config field in the file that define cloud_provider info.
 
 config:
   client_connection: ['./lib/plugin/client_fog', 'FogAdapter'] #Load FogAdapter as a cloud client.
-  placement_plugin:  ['plugin/placement_Your_Write', 'MyPlacement'] #You could select your own placement plugin
+  placement_plugin:  ['plugin/MyPlacement', 'MyPlacement'] #You could select your own placement engine
 
 === cluster definition
 
@@ -114,6 +107,7 @@ cluster_definition: {
         "vc_rps": ["resource_pool2"]
       }
       "storage": {
+        "type": 'local',
         "name_pattern": ["local", "vmfs*"],
         "size": 50
       }
@@ -141,15 +135,14 @@ func.vc.yaml describes vSphere cloud provider definition.
 ut.vc.yaml describes UT cloud provider definition.
 
 unit test:
-spec/ut.config.yaml       #define some options for fog_dummy
-spec/ut.dc.yaml           #define a simulated vSphere datacenter, needed by fog_dummy
-spec/ut.vc.yaml           #define a simle vc configuration for testing
-spec/ut.cluster_def*.yaml #define UT test cases
+spec/assets/unit/ut.dc.yaml           #define a simulated vSphere datacenter, needed by fog_dummy
+spec/assets/unit/ut.vc.yaml           #define a simle vc configuration for testing
+spec/assets/unit/ut.cluster_def*.yaml #define UT test cases
 > spec spec/cloud_unit_test.rb
 
 func test:
-spec/func.vc.yaml           #func test vSphere configuration, include user name/password/ip address, etc.
-spec/func.cluster_def.yaml  #define func test cases
+spec/func/func.vc.yaml           #func test vSphere configuration, include user name/password/ip address, etc.
+spec/func/func.cluster_def.yaml  #define func test cases
 > spec spec/cloud_func_test.rb
 
 note:
