--- a/README.rdoc
+++ b/README.rdoc
@@ -22,8 +22,8 @@ All kinds of GROUP, can place their VM in one Virtual Group. VG can handle the r
 
 === Install
 
-  Currently, It depend on fog-1.3.1.serengeti.1.gem, you should install it firstly.
-  sudo gem install cloud-manager-0.5.0.gem --local --no-ri --no-rdoc
+  Currently, It depend on fog-1.3.1.serengeti.gem, you should install it firstly.
+  sudo gem install cloud-manager-0.6.0.gem --local --no-ri --no-rdoc
 
 === cloud provider definition
 
